# doc_template

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
scripts/: inspect.js  make-sample-template.js  smoke-test.js
src/: docx.js  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
