[package]
name = "doc-template-filler"
version = "1.0.0"
description = "Doc Template Filler"
authors = ["you"]
edition = "2021"

[lib]
name = "doc_template_filler_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ttf-parser = "0.21"
walkdir = "2"
